--- a/app/assets/stylesheets/front/_footer.scss
+++ b/app/assets/stylesheets/front/_footer.scss
@@ -46,22 +46,15 @@ footer {
       display: block;
       transition: all 250ms;
       overflow:hidden;
-      &:after {
-        content: ' ';
-        position: absolute;
-        top: 0;left:0;right: 0;bottom: 0;
-        border-radius: 100%;
-        transform: scale(0);
-        background-color: rgba(0,0,0, 0.5);
-        transition: all 250ms;
-      }
+      border: 2px solid $primary;
       &:hover {
-          &:after {
-            transform: scale(1.5);
+          img {
+            transform: scale(1.1);
           }
       }
       img {
-        border: 2px solid $primary;
+        transition: all 250ms;
+
       }
     }
   }
