--- a/app/assets/stylesheets/front/_menu.scss
+++ b/app/assets/stylesheets/front/_menu.scss
@@ -12,6 +12,9 @@ $navSocialLinkMarge: 7px;
   }
 }
 
+.navbar-default {
+  background-color: transparent;
+}
 #navSocial {
   height: $navSocialSize;
   background-color: #000;
@@ -61,7 +64,7 @@ $navSocialLinkMarge: 7px;
 
 #menu {
   max-height: $navSocialSize*2;
-  background-color: rgba(0,0,0, 0.35);
+  background-color: rgba(0,0,0, 0.55);
   margin: 0;
   padding:0;
   border: none;
