--- a/app/assets/stylesheets/front/home/_interaction.scss
+++ b/app/assets/stylesheets/front/home/_interaction.scss
@@ -1,10 +1,15 @@
 @import "../vars";
 #interaction{
+
   position: relative;
+  svg {
+    width: 100%;
+    height: 250px;
+  }
   #interactionContainer {
     background-color: white;
-    padding: 45px;
-    padding-top: 45px;
+    padding: 65px;
+    padding-top: 65px;
     margin-top: -10%;
     margin-bottom: 10%;
     .interaction-one{
@@ -13,7 +18,6 @@
         text-align: center;
         width: 100%;
         margin: 0 auto;
-        background-color: rgb(150,150,150);
         display: block;
         margin-bottom:15px;
         img {
@@ -24,11 +28,70 @@
       h2  {
         text-align: center;
         text-transform: uppercase;
-        color: #404040;
+        color: $primary;
       }
       p {
         color: #404040;
       }
     }
+    .interaction-one:hover {
+      a {
+        text-decoration: none;
+      }
+      h2 {
+        color: darken($primary, 15%);
+      }
+    }
+    #MainSigne {
+      transition: all 250ms;
+      transform: translateX(-30px);
+    }
+    #MainSigneBlock:hover {
+      #MainSigne {
+        transform: translateX(0);
+      }
+    }
+
+    #DepotProjetBlock {
+      svg {
+        width: 100%;
+        height: 250px;
+      }
+    }
+    #Feuille {
+      transition: all 450ms;
+    }
+
+    #DepotProjetBlock:hover {
+      #Feuille {
+        transform: translate(-50px, 400px);
+      }
+    }
+    #SondageBlock {
+      #barreRouge {
+        transform-origin: bottom;
+        transition: all 250ms;
+      }
+      #barreBleu {
+        transform-origin: bottom;
+        transition: all 450ms;
+      }
+      #barreVerte {
+        transform-origin: bottom;
+        transition: all 750ms;
+      }
+    }
+    #SondageBlock:hover {
+      #barreRouge {
+        transform: scaleY(1.1);
+      }
+      #barreBleu {
+        transform: scaleY(1.1);
+      }
+      #barreVerte {
+        transform: scaleY(1.1);
+      }
+    }
+
   }
 }
