--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,31 +1,68 @@
 <%= stylesheet_link_tag 'articles', media: 'all', 'data-turbolinks-track' => true %>
+<header>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1>Je suis les actualités en Meuse</h1>
+        <ul>
+          <li>Accueil</li>
+          <li>Articles</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
 
 <section id="actualites">
   <div class="container">
-    <div class="col-md-9">
-      <% @articles.each do | article | %>
-        <h1><%= link_to article.name, article_path( article.friendly_id )%></h1>
-        <p>
-          <%= article.content %>
-        </p>
+    <div class="row">
+      <div id= "articles-col" class="col-md-10">
+        <% @articles.each do | article | %>
+
+        <article>
+          <div class="container-fluid">
+            <div class="row article-item">
+              <div class="col-lg-5" id="article-item-left">
+                <%= image_tag "http://fond-ecran.loopio.fr/Fonds%20d'%C3%A9cran%20Pokemon/slides/fond-ecran-pokemon-32.jpg" , class: "img-responsive img-thumbnail" %>
+                <div class="image-triangle">
+
+                </div>
+              </div>
+              <div class="col-lg-7" id="article-item-right">
+                <div class="row">
+                  <h1><%= link_to article.name, article_path( article.friendly_id )%></h1>
+                  <p>
+                    <%= article.content %>
+                  </p>
+                </div>
+                <div class="row">
+                  <ul>
+                    <li>Créé le:  <%= time_tag article.published_at, format: :morejformat %></li>
+                    <li>Auteur:   <%= article.owner.username %></li>
+                    <li>Catégorie: <%= article.category.name %></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </article>
+
+        <% end %>
+
+
+        <br>
+        <%= will_paginate @articles %>
+      </div>
+      <div id="categories-menu" class="col-md-2">
+        <h3>Catégories :</h3>
         <ul>
-          <li>Créé le:  <%= article.published_at %></li>
-          <li>Auteur:   <%= article.owner.username %></li>
-          <li>Catégorie: <%= article.category.name %></li>
+          <li>Agriculture</li>
+          <li>Aide à la personne</li>
+          <li>High Tech</li>
         </ul>
-      <% end %>
-
-      <%= will_paginate @articles %>
+      </div>
     </div>
-    <div class="col-md-3 menu-categories">
-      <h3>Catégories :</h3>
-      <ul>
-        <li>Agriculture</li>
-        <li>Aide à la personne</li>
-        <li>High Tech</li>
-      </ul>
-    </div>
-
   </div>
 </section>
 
