--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,25 +22,24 @@
         <article>
           <div class="container-fluid">
             <div class="row article-item">
-              <div class="col-lg-5" id="article-item-left">
+              <div class="col-lg-5 article-item-left">
                 <%= image_tag "http://fond-ecran.loopio.fr/Fonds%20d'%C3%A9cran%20Pokemon/slides/fond-ecran-pokemon-32.jpg" , class: "img-responsive img-thumbnail" %>
-                <div class="image-triangle">
-
-                </div>
+                <div class="image-triangle"></div>
+                <div class="image-category" style= "background-color:<%= article.category.color %>;"><%= image_tag article.category.icon %></div>
               </div>
-              <div class="col-lg-7" id="article-item-right">
-                <div class="row">
-                  <h1><%= link_to article.name, article_path( article.friendly_id )%></h1>
+              <div class="col-lg-7 article-item-right">
+                <div class="row article-item-content">
+                  <div class="article-title-yo"><h3><%= link_to article.name, article_path( article.friendly_id ), style: "color: white;"%></h3></div>
                   <p>
                     <%= article.content %>
                   </p>
+                  <%= link_to 'En savoir plus <i class="fa fa-chevron-right"></i>'.html_safe, article_path( article.friendly_id ), class: "know-more" %>
                 </div>
-                <div class="row">
-                  <ul>
-                    <li>Créé le:  <%= time_tag article.published_at, format: :morejformat %></li>
-                    <li>Auteur:   <%= article.owner.username %></li>
-                    <li>Catégorie: <%= article.category.name %></li>
-                  </ul>
+                <div class="row article-item-footer">
+                    <!--Créé le:  <%= time_tag article.published_at, format: :morejformat %>-->
+                    <span class="col-xs-5">par    <%= article.owner.username %></span>
+                    <span class="col-xs-5"><%= article.comments.count != 0 ? "#{article.comments.count} Commentaires" : "Aucun Commentaire" %></span>
+                    <span class="col-xs-2">F T</span>
                 </div>
               </div>
             </div>
