--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -31,8 +31,9 @@ header {
 
 .articles-col {
   border-left: 6px solid #4B9AB6;
-  padding-top: 50px;
-  margin-top: 10px;
+  padding-top: 10px;
+  margin-top: 30px;
+  margin-bottom: 75px;
 }
 
 article {
@@ -162,13 +163,14 @@ article:first-child {
   border-bottom: 1px solid #4B9AB6;
   max-width: 100%;
   margin-left: 60px;
-  padding-top: 60px;
+  padding-top: 50px;
+  text-align: center;
   span {
     position: absolute;
     color: #4B9AB6;
-    top:-30px;
+    top:-50px;
     left: -65px;
-    margin-top: 60px;
+    margin-top: 80px;
     border-top: 5px solid #4B9AB6;
     &:before {
       content: '';
@@ -178,14 +180,15 @@ article:first-child {
       left: -25px;
       height: 25px;
       width: 25px;
+      border: 5px solid #4B9AB6;
       border-radius: 25px;
-      background-color: #4B9AB6;
+      background-color: white;
     }
 
   }
   .calendar-text {
     margin-top: .3em;
-    font-size: .8em;
+    font-size: .65em;
   }
 }
 
