--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'front/articles/show', media: 'all', 'data-turbolinks-track' => true %>
 <article class="article-one">
   <h1><%= link_to @article.name, article_path( @article.friendly_id ) %></h1>
   <p>
