--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'articles', media: 'all', 'data-turbolinks-track' => true %>
+<%= stylesheet_link_tag 'front/articles/index', media: 'all', 'data-turbolinks-track' => true %>
 <header>
   <div class="container-fluid">
     <div class="row">
@@ -69,10 +69,3 @@
     </div>
   </div>
 </section>
-
-
-
-
-
-
-<%= javascript_include_tag 'articles', 'data-turbolinks-track' => true %>
